app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.className: public
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myapp.info
      http:
        paths:
          - path: /myapp
            pathType: Prefix
            backend:
              service: 
                name: myappclusterip
                port: 
                  number: 8181
